# human-in-the-loop

./: .env.example  .gitignore  README.md  agents.json  main.py  pyproject.toml
agent_configs/: fear-1.json  fear.json  inner-council-1.json  inner-council.json  intuition-1.json  intuition.json  reason-1.json  reason.json
backend/: app.py  eleven.py  prompts.py  requirements.txt
frontend/: index.html  script.js  style.css
